@@ -1,3 +1,9 @@
+2009-02-22  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* capplets/appearance/appearance-font.c:
+	* capplets/mouse/gnome-mouse-properties.c:
+	* typing-break/drw-utils.c: Replace deprecated GTK sybmols. Bug #572325
+
 2009-02-18  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Jonas Bonn
